--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/yerson345/React-Intro.git",
+  "homepage": "https://yerson345.github.io/React-Intro",
   "devDependencies": {
     "gh-pages": "^6.1.1"
   }
